--- a/slides/src/content/4-kernspec.scss
+++ b/slides/src/content/4-kernspec.scss
@@ -2,6 +2,7 @@
   text-align: right;
   margin: 70px 0;
 }
+
 #kern2 blockquote {
   margin: 0;
   background-color: rgba(0,0,0,0.1) ;
@@ -11,14 +12,25 @@
   font-family: $font-stack-sans;
   font-style: italic;
 }
+
 #custresults img {
   width: 100%;
   margin-bottom: 20px;
 }
-#custresults h2 {
-  text-align: center ;
-  font-family: 'PT Serif', georgia, serif ;
+
+#custresults {
+  h2 {
+    text-align: center;
+  }
+  .yellow {
+    color:#cc8000;
+  }
 }
-.yellow {
-  color:#cc8000;
+
+// Hide optresults while in kern steps
+.impress-on-kern1, .impress-on-kern2, .impress-on-custresults {
+  #optresults { opacity: .05; }
+}
+.impress-on-custresults {
+  #compilers, #cuda1 { opacity: .05; }
 }
