--- a/slides/src/content/8-cuda.scss
+++ b/slides/src/content/8-cuda.scss
@@ -59,4 +59,7 @@ body::before {
   }
 }
 
-
+// Hide custresults while on cuda1
+.impress-on-cuda1 #custresults {
+  opacity: 0;
+}
